# actix_image_processing

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  tests.rs
static/: form.js  index.html
