[package]
name = "actix_img_proc"
version = "0.1.0"
authors = ["nemtsevdd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
actix-web = { version="2.0.0", features=["rustls"] }
actix-rt = "1.0.0"
actix-files = "0.2.1"
actix-multipart = "0.2.0"
serde = "1.0.43"
serde_derive = "1.0.43"
serde_json = "1.0.43"
bytes = "0.5.3"
rand = "0.7.2"
image = "0.22.3"
env_logger = "0.6"
